# Study_Planner_C

./: CMakeLists.txt  README.md
Data/: sergio.json  sergio_schedule.ics
include/: FileException.hpp  assignment.hpp  displayfunctions.hpp  planner.hpp
src/: assignment.cpp  displayfunctions.cpp  main.cpp  planner.cpp
test/: test_assignment.cpp  test_displayfunctions.cpp  test_planner.cpp
